--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -152,12 +152,22 @@ table#report_list .report_name {
     width: 20%;
     padding: 10px 2%;
 }
+
 table#report_list .report_date {
-    width: 20%;
+    width: 15%;
 }
 
 table#report_list .report_title {
-    width: 37%;
+    width: 20%;
+}
+
+
+table#report_list .report_begin {
+    width: 15%;
+}
+
+table#report_list .report_finish {
+    width: 15%;
 }
 
 table#report_list .report_action {
